fixing some spacing issues i made earlier

--- a/hackDuke2015/styles.css
+++ b/hackDuke2015/styles.css
@@ -25,7 +25,7 @@ button:focus {
   outline: none;
 }
 
-svg {
+#povertyChart {
     height: 700px;
     width: 1000px;
 }
